# MyBaseOpenGL

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
dependencies/glad/: glad.h
src/: glad.c  main.cpp
